--- a/Promesometro-iOS/Podfile
+++ b/Promesometro-iOS/Podfile
@@ -1,15 +1,16 @@
-# Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '12.0'
+use_frameworks!
+inhibit_all_warnings!
+
+def architectural_pods
+  pod 'SwiftLint'
+end
 
 target 'Promesometro-iOS' do
-  # Comment the next line if you don't want to use dynamic frameworks
-  use_frameworks!
-
-  # Pods for Promesometro-iOS
+  architectural_pods
 
   target 'Promesometro-iOSTests' do
     inherit! :search_paths
-    # Pods for testing
+    architectural_pods
   end
-
 end
