--- a/Promesometro-iOS/Podfile
+++ b/Promesometro-iOS/Podfile
@@ -2,7 +2,7 @@ platform :ios, '12.0'
 use_frameworks!
 inhibit_all_warnings!
 
-def project_pods
+def app_pods
   pod 'SwiftLint'
 end
 
@@ -10,15 +10,20 @@ def web_service_pods
   pod 'Alamofire', :git => 'https://github.com/Alamofire/Alamofire.git', :branch => 'alamofire5'
 end
 
-target 'Promesometro-iOS' do
-  project_pods
+def shared_pods
+  pod 'PromisedFuture'
+end
 
-#  target 'Promesometro-iOSTests' do
-#    inherit! :search_paths
-#    project_pods
-#  end
+target 'Promesometro-iOS' do
+  app_pods
+  shared_pods
+  #  target 'Promesometro-iOSTests' do
+  #    inherit! :search_paths
+  #    app_pods
+  #  end
 end
 
 target 'PromesometroService' do
   web_service_pods
+  shared_pods
 end
