--- a/Promesometro-iOS/.swiftlint.yml
+++ b/Promesometro-iOS/.swiftlint.yml
@@ -58,6 +58,7 @@ opt_in_rules: # some rules are only opt-in
   - untyped_error_in_catch
   - vertical_parameter_alignment_on_call
   - yoda_condition
+  - multiple_closures_with_trailing_closure
 # included: # paths to include during linting. `--path` is ignored if present.
 excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Pods
